--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
         }
     ],
 
-    "dependencies": {        
+    "dependencies": {
         "@gruppe-adler/replay": ">=0.0.1",
         "grad-listbuymenu": ">=0.0.1",
         "grad-fortifications": ">=0.0.1",
         "grad-loadout": ">=0.0.1",
         "grad-factions-tvt": ">=0.0.1",
-        "grad-civs": ">=0.0.1"
+        "grad-civs": ">=0.0.1",
+        "grad-aicommand": ">=0.0.1"
     }
 }
